err/flexds.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/flex'...
Compiling './lib/python3.5/site-packages/flex/app.py'...
***   File "./lib/python3.5/site-packages/flex/app.py", line 68
    print info_str
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/flex/blocks.py'...
***   File "./lib/python3.5/site-packages/flex/blocks.py", line 108
    print '\n'.join(content)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flex/pipeline.py'...
***   File "./lib/python3.5/site-packages/flex/pipeline.py", line 82
    raise Exception, 'circular pipeline reference to %s' % filename
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flex/tests'...
Compiling './lib/python3.5/site-packages/flex/tests/basic_tests.py'...
***   File "./lib/python3.5/site-packages/flex/tests/basic_tests.py", line 148
    except ParseException, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/flex/tests/blocks.py'...
***   File "./lib/python3.5/site-packages/flex/tests/blocks.py", line 30
    print 'gnuplot not found: skipping tests'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/flex/tests/config.py'...
***   File "./lib/python3.5/site-packages/flex/tests/config.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/flex/tests/pipelines'...
Listing './lib/python3.5/site-packages/flexds-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
